# rust-mustache

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  crate.rc  index.html  mustache.rc  mustache.rs  rustfmt.toml  search-index.js
examples/: file.tpl  simple.rs  vector_iteration.rs  with_file.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
mustache/: compile_iter.v.html  compile_path.v.html  compile_str.v.html  enum.Data.html  enum.EncoderError.html  enum.Error.html  enum.ParserError.html  fn.compile_iter.html  fn.compile_path.html  fn.compile_str.html  fn.to_data.html  index.html  struct.Context.html  struct.Encoder.html  struct.MapBuilder.html  struct.Template.html  struct.VecBuilder.html  to_data.v.html  type.Result.html
mustache/builder/: VecBuilder.t.html
src/: builder.rs  compiler.rs  context.rs  data.rs  encoder.rs  error.rs  lib.rs  macros.rs  main.rs  parser.rs  template.rs  test_codegen.rs.in
src/encoder/: mod.rs
src/mustache/: builder.rs  builder.rs.html  compiler.rs  compiler.rs.html  context.rs.html  data.rs.html  encoder.rs  encoder.rs.html  error.rs.html  lib.rs  lib.rs.html  macros.rs.html  mustache.rs  parser.rs  parser.rs.html  template.rs  template.rs.html  test.rs
src/serde/: export.rs.html  lib.rs.html  macros.rs.html
tests/: builder.rs  encoder.rs  macros.rs  template.rs  test.rs
tests/test-data/: user.mustache
(+22 files in other folders)
