[package]
name = "mustache"
description = "Rust implementation of Mustache"
repository = "https://github.com/nickel-org/rust-mustache"
documentation = "http://nickel-org.github.io/rust-mustache"
version = "0.8.2"
authors = ["erick.tryzelaar@gmail.com"]
license = "MIT/Apache-2.0"

[features]
unstable = []

[dependencies]
rustc-serialize = "0.3.18"
log = "0.3.5"

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "test"
path = "tests/test.rs"
